# rt_vk_example

./: Cargo.toml  plan.md  record
shader/full_screen/: full_screen.frag  full_screen.vert
shader/test/: triangle.vert  triangle.vert.spv
shader/triangle/: triangle.frag  triangle.frag.spv  triangle.vert.spv
src/: app.rs  base.rs  lib.rs  triangle2.rs
src/base/: buffer.rs  loader.rs  pso.rs  ri.rs  surface.rs  utility.rs  world.rs
