[package]
name = "rt_vk_example"
version = "0.1.0"
authors = ["darktong <darktong.black@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.19.5"
image = "0.10.4"
ash = "0.31.0"
ash-window = "0.4"
